syntax = "proto3";

option go_package = "github.com/kushal88053/go_with_grpc/proto";

package kushal_service;

service KushalService {
  rpc SayHello(NoParam) returns (HelloResponse);
  rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);
  rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);
  rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam {
}

message NameList {
  repeated string names = 1;
}

message HelloRequest {
   string names = 1;
}

message HelloResponse {
  string message = 1;
}

message MessageList {
  repeated string messages = 1;
}
